<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bandResistor4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/TotalPadden"
        android:text="@string/bandResistorTxtButton4" />

    <Button
        android:id="@+id/bandResistor5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/TotalPadden"
        android:text="@string/bandResistortxtButton5" />

    <Button
        android:id="@+id/bandResistor6"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/TotalPadden"
        android:text="@string/bandResistorTxtButton6" />

</LinearLayout>
