<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BandResistor6" >

    <Spinner
        android:id="@+id/Spin1Band6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/Resistor_Color_Band" />

    <Spinner
        android:id="@+id/Spin2Band6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/Resistor_Color_Band" />

    <Spinner
        android:id="@+id/Spin3Band6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/Resistor_Color_Band" />

    <Spinner
        android:id="@+id/SpinMultiply6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/Resistor_Color_Multiplier" />

    <Spinner
        android:id="@+id/SpinTolerance6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/Resistor_Color_Tolerance" />

    <Spinner
        android:id="@+id/spinTemperature6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/Resistor_Color_Temperature" />

    <TextView
        android:id="@+id/txtVTotalResistance6"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/halfPadding"
        android:text="@string/DefaultResistance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtVTolerance6"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/halfPadding"
        android:text="@string/DefaultTolerance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtTemperature6"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/halfPadding"
        android:text="@string/DefaultTemperature"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
